--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -16,7 +17,9 @@
     "build": "react-scripts build",
     "dev": "parcel build src/index.js --no-source-maps -d bundles",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0"
   },
+  "homepage": "https://dvmishra.github.io/quiz-widget",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
