--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "no-return-assign": ["warn"],
     "no-unused-vars": ["warn"],
     "react/no-array-index-key": ["warn"],
-    "no-use-before-define": ["warn"]
+    "no-use-before-define": ["warn"],
+    "import/prefer-default-export": ["warn"],
+    "arrow-body-style": ["warn"]
   }
 }
