--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   "extends": ["airbnb", "prettier"],
   "env": { "browser": true, "jest": true },
   "rules": {
-    "max-len": ["error", { "code": 100 }],
+    "max-len": ["warn", { "code": 100 }],
     "prefer-promise-reject-errors": ["off"],
     "react/jsx-filename-extension": ["warn"],
     "react/prop-types": ["warn"],
@@ -18,6 +18,8 @@
     "no-use-before-define": ["warn"],
     "import/prefer-default-export": ["warn"],
     "arrow-body-style": ["warn"],
-    "import/no-unresolved": [2, { "caseSensitive": false }]
+    "import/no-unresolved": [2, { "caseSensitive": false }],
+    "react/jsx-curly-brace-presence": "warn",
+    "react/self-closing-comp": "warn",
   }
 }
