Add linear progress

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,5 +21,6 @@
     "import/no-unresolved": [2, { "caseSensitive": false }],
     "react/jsx-curly-brace-presence": "warn",
     "react/self-closing-comp": "warn",
+    "prefer-const": ["warn"]
   }
 }
