--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment-duration-format": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
