--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "no-use-before-define": ["warn"],
     "import/prefer-default-export": ["warn"],
     "arrow-body-style": ["warn"],
-    "import/no-unresolved": [2, { "caseSensitive": false }],
+    "import/no-unresolved": ["warn"],
     "react/jsx-curly-brace-presence": "warn",
     "react/self-closing-comp": "warn",
     "prefer-const": ["warn"],
