--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "react/jsx-curly-brace-presence": "warn",
     "react/self-closing-comp": "warn",
     "prefer-const": ["warn"],
-    "no-param-reassign": ["warn"]
+    "no-param-reassign": ["warn"],
+    "no-nested-ternary": ["warn"]
   }
 }
