--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
@@ -20,6 +21,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.10",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
