--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-timer-hook": "^3.0.4",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2",
