--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animations": "^1.0.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "react-timer-hook": "^3.0.4",
     "styled-components": "^5.3.0",
